--- a/studenckie/warsztat/extra.glade
+++ b/studenckie/warsztat/extra.glade
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkWindow" id="ExtraWindow">
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkBox" id="ExtraBox1">
+      <object class="GtkBox" id="ExtraBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="homogeneous">True</property>
         <child>
-          <object class="GtkLabel" id="ExtraLabel1">
+          <object class="GtkLabel" id="ExtraLabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
           </object>
@@ -22,12 +22,12 @@
           </packing>
         </child>
         <child>
-          <object class="GtkButton" id="ExtraButton1">
+          <object class="GtkButton" id="ExtraButton">
             <property name="label" translatable="yes">OK</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
-            <signal name="clicked" handler="ExtraButton1_clicked_cb" swapped="no"/>
+            <signal name="clicked" handler="ExtraButton_clicked_cb" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
