--- a/studenckie/warsztat/login.glade
+++ b/studenckie/warsztat/login.glade
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkWindow" id="LoginWindow">
     <property name="can_focus">False</property>
     <signal name="destroy" handler="LoginWindow_destroy_cb" swapped="no"/>
     <child>
-      <object class="GtkBox" id="LoginBox1">
+      <object class="GtkBox" id="LoginBox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="homogeneous">True</property>
         <child>
-          <object class="GtkLabel" id="LoginLabel1">
+          <object class="GtkLabel" id="LoginLabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="label" translatable="yes">
@@ -30,13 +30,13 @@ ZALOGUJ SIĘ DO SYSTEMU:
           </packing>
         </child>
         <child>
-          <object class="GtkGrid" id="LoginGrid2">
+          <object class="GtkGrid" id="LoginGrid">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="row_homogeneous">True</property>
             <property name="column_homogeneous">True</property>
             <child>
-              <object class="GtkEntry" id="LoginEntry21">
+              <object class="GtkEntry" id="LoginEntry1b">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="input_purpose">alpha</property>
@@ -44,27 +44,23 @@ ZALOGUJ SIĘ DO SYSTEMU:
               <packing>
                 <property name="left_attach">1</property>
                 <property name="top_attach">0</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="LoginButton23">
+              <object class="GtkButton" id="LoginButton3b">
                 <property name="label" translatable="yes">WEJDŹ</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <signal name="clicked" handler="LoginButton23_clicked_cb" swapped="no"/>
+                <signal name="clicked" handler="LoginButton3b_clicked_cb" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">1</property>
                 <property name="top_attach">2</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="LoginEntry22">
+              <object class="GtkEntry" id="LoginEntry2b">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="input_purpose">password</property>
@@ -72,12 +68,10 @@ ZALOGUJ SIĘ DO SYSTEMU:
               <packing>
                 <property name="left_attach">1</property>
                 <property name="top_attach">1</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="LoginLabel22">
+              <object class="GtkLabel" id="LoginLabe2a">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">HASŁO</property>
@@ -86,12 +80,10 @@ ZALOGUJ SIĘ DO SYSTEMU:
               <packing>
                 <property name="left_attach">0</property>
                 <property name="top_attach">1</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="LoginLabel21">
+              <object class="GtkLabel" id="LoginLabel1a">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">UŻYTKOWNIK</property>
@@ -100,8 +92,6 @@ ZALOGUJ SIĘ DO SYSTEMU:
               <packing>
                 <property name="left_attach">0</property>
                 <property name="top_attach">0</property>
-                <property name="width">1</property>
-                <property name="height">1</property>
               </packing>
             </child>
             <child>
