--- a/studenckie/warsztat/uslugi.glade
+++ b/studenckie/warsztat/uslugi.glade
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkWindow" id="UslugiWindow">
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkBox" id="UslugiBox1">
+      <object class="GtkBox" id="UslugiBoxMain">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="homogeneous">True</property>
         <child>
-          <object class="GtkLabel" id="UslugiLabel11">
+          <object class="GtkLabel" id="UslugiLabelMain">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="label" translatable="yes">PANEL USŁUG SPRZEDAWCY</property>
@@ -23,16 +23,16 @@
           </packing>
         </child>
         <child>
-          <object class="GtkNotebook" id="UslugiNotebook2">
+          <object class="GtkNotebook" id="UslugiNotebook">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <child>
-              <object class="GtkBox" id="UslugiBoxP1">
+              <object class="GtkBox" id="UslugiBoxPage1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="homogeneous">True</property>
                 <child>
-                  <object class="GtkLabel" id="UslugiLabelP11">
+                  <object class="GtkLabel" id="UslugiLabel11a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">NAZWA USŁUGI</property>
@@ -44,7 +44,7 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBoxText" id="UslugiComboboxtextP11">
+                  <object class="GtkComboBoxText" id="UslugiComboboxtext11b">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
@@ -56,12 +56,12 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="UslugiButtonP11">
+                  <object class="GtkButton" id="UslugiButton11c">
                     <property name="label" translatable="yes">SPRAWDŹ</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="UslugiButtonP11_clicked_cb" swapped="no"/>
+                    <signal name="clicked" handler="UslugiButton11c_clicked_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -72,7 +72,7 @@
               </object>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="UslugiLabel21">
+              <object class="GtkLabel" id="UslugiLabelPage1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">SPRAWDŹ CENĘ</property>
@@ -82,13 +82,13 @@
               </packing>
             </child>
             <child>
-              <object class="GtkGrid" id="UslugiGridP2">
+              <object class="GtkGrid" id="UslugiGridPage2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="row_homogeneous">True</property>
                 <property name="column_homogeneous">True</property>
                 <child>
-                  <object class="GtkLabel" id="UslugiLabelP21">
+                  <object class="GtkLabel" id="UslugiLabel21a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">NAZWA</property>
@@ -96,12 +96,10 @@
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">0</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="UslugiLabelP22">
+                  <object class="GtkLabel" id="UslugiLabel22a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">CENA</property>
@@ -109,12 +107,10 @@
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="UslugiEntryP21">
+                  <object class="GtkEntry" id="UslugiEntry21b">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="input_purpose">alpha</property>
@@ -122,12 +118,10 @@
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">0</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="UslugiEntryP22">
+                  <object class="GtkEntry" id="UslugiEntry22b">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="input_purpose">number</property>
@@ -135,23 +129,19 @@
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="UslugiButtonP23">
+                  <object class="GtkButton" id="UslugiButton23b">
                     <property name="label" translatable="yes">DODAJ</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="UslugiButtonP23_clicked_cb" swapped="no"/>
+                    <signal name="clicked" handler="UslugiButton23b_clicked_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">2</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
@@ -163,7 +153,7 @@
               </packing>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="UslugiLabel22">
+              <object class="GtkLabel" id="UslugiLabelPage2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">DODAJ USŁUGĘ</property>
@@ -174,13 +164,13 @@
               </packing>
             </child>
             <child>
-              <object class="GtkGrid" id="UslugiGridP3">
+              <object class="GtkGrid" id="UslugiGridPage3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="row_homogeneous">True</property>
                 <property name="column_homogeneous">True</property>
                 <child>
-                  <object class="GtkLabel" id="UslugiLabelP31">
+                  <object class="GtkLabel" id="UslugiLabel31a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">NAZWA</property>
@@ -188,12 +178,10 @@
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">0</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="UslugiLabelP32">
+                  <object class="GtkLabel" id="UslugiLabel32a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">CENA</property>
@@ -201,12 +189,10 @@
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="UslugiEntryP32">
+                  <object class="GtkEntry" id="UslugiEntry32b">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="input_purpose">number</property>
@@ -214,27 +200,23 @@
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="UslugiButtonP33">
+                  <object class="GtkButton" id="UslugiButton33b">
                     <property name="label" translatable="yes">ZMIEŃ</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="UslugiButtonP33_clicked_cb" swapped="no"/>
+                    <signal name="clicked" handler="UslugiButton33b_clicked_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">2</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBoxText" id="UslugiComboboxtextP31">
+                  <object class="GtkComboBoxText" id="UslugiComboboxtext31b">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
@@ -242,8 +224,6 @@
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">0</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
@@ -255,7 +235,7 @@
               </packing>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="UslugiLabel23">
+              <object class="GtkLabel" id="UslugiLabelPage3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">ZMIEŃ CENĘ USŁUGI</property>
