--- a/studenckie/warsztat/zlecenia.glade
+++ b/studenckie/warsztat/zlecenia.glade
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.1 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
   <object class="GtkWindow" id="ZleceniaWindow">
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkBox" id="ZleceniaBox">
+      <object class="GtkBox" id="ZleceniaBoxMain">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkLabel" id="ZleceniaLabel1">
+          <object class="GtkLabel" id="ZleceniaLabelMain">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="label" translatable="yes">
@@ -26,17 +26,17 @@ PANEL ZLECEŃ SPRZEDAWCY
           </packing>
         </child>
         <child>
-          <object class="GtkNotebook" id="ZleceniaNotebook2">
+          <object class="GtkNotebook" id="ZleceniaNotebook">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <child>
-              <object class="GtkGrid" id="ZleceniaGridP1">
+              <object class="GtkGrid" id="ZleceniaGridPage1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="row_homogeneous">True</property>
                 <property name="column_homogeneous">True</property>
                 <child>
-                  <object class="GtkLabel" id="ZleceniaLabelP11">
+                  <object class="GtkLabel" id="ZleceniaLabel11a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">NUMER REJESTRACYJNY</property>
@@ -44,12 +44,10 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">0</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="ZleceniaLabelP12">
+                  <object class="GtkLabel" id="ZleceniaLabel12a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">CZY FAKTURA</property>
@@ -57,24 +55,10 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="ZleceniaEntryP11">
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                  </object>
-                  <packing>
-                    <property name="left_attach">1</property>
-                    <property name="top_attach">0</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkComboBoxText" id="ZleceniaComboboxtextP12">
+                  <object class="GtkComboBoxText" id="ZleceniaComboboxtext12b">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
@@ -86,12 +70,10 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="ZleceniaLabelP14">
+                  <object class="GtkLabel" id="ZleceniaLabel13a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">ID KLIENTA</property>
@@ -99,12 +81,10 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">2</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="ZleceniaLabelP15">
+                  <object class="GtkLabel" id="ZleceniaLabel14a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">MODEL SAMOCHODU</property>
@@ -112,12 +92,10 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">3</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBoxText" id="ZleceniaComboboxtextP13">
+                  <object class="GtkComboBoxText" id="ZleceniaComboboxtext13b">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
@@ -125,36 +103,77 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">2</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBoxText" id="ZleceniaComboboxtextP14">
+                  <object class="GtkComboBoxText" id="ZleceniaComboboxtext14b">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="active">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">3</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="ZleceniaButtonP15">
+                  <object class="GtkButton" id="ZleceniaButton15b">
                     <property name="label" translatable="yes">ZŁÓŻ ZLECENIE</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="ZleceniaButtonP15_clicked_cb" swapped="no"/>
+                    <signal name="clicked" handler="ZleceniaButton15b_clicked_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">4</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkBox" id="ZleceniaBox11b">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <child>
+                      <object class="GtkEntry" id="ZleceniaEntry11ba">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="max_width_chars">2</property>
+                        <property name="input_purpose">alpha</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel" id="ZleceniaLabel11bb">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">  :  </property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkEntry" id="ZleceniaEntry11bc">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="max_length">5</property>
+                        <property name="max_width_chars">5</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="top_attach">0</property>
                   </packing>
                 </child>
                 <child>
@@ -163,7 +182,7 @@ PANEL ZLECEŃ SPRZEDAWCY
               </object>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="ZleceniaLabel21">
+              <object class="GtkLabel" id="ZleceniaLabelPage1">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">NOWE ZLECENIE</property>
@@ -173,13 +192,13 @@ PANEL ZLECEŃ SPRZEDAWCY
               </packing>
             </child>
             <child>
-              <object class="GtkGrid" id="ZleceniaGridP2">
+              <object class="GtkGrid" id="ZleceniaGridPage2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="row_homogeneous">True</property>
                 <property name="column_homogeneous">True</property>
                 <child>
-                  <object class="GtkLabel" id="ZleceniaLabelP21">
+                  <object class="GtkLabel" id="ZleceniaLabel21a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">ID ZLECENIA</property>
@@ -187,12 +206,10 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">0</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBoxText" id="ZleceniaComboboxtextP21">
+                  <object class="GtkComboBoxText" id="ZleceniaComboboxtext21b">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
@@ -200,12 +217,10 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">0</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="ZleceniaLabelP22">
+                  <object class="GtkLabel" id="ZleceniaLabel22a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">NAZWA USŁUGI</property>
@@ -213,27 +228,23 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="ZleceniaButtonP23">
+                  <object class="GtkButton" id="ZleceniaButton23b">
                     <property name="label" translatable="yes">ZATWIERDŹ ZMIANY</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="ZleceniaButtonP23_clicked_cb" swapped="no"/>
+                    <signal name="clicked" handler="ZleceniaButton23b_clicked_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">2</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBoxText" id="ZleceniaComboboxtextP22">
+                  <object class="GtkComboBoxText" id="ZleceniaComboboxtext22b">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
@@ -241,8 +252,6 @@ PANEL ZLECEŃ SPRZEDAWCY
                   <packing>
                     <property name="left_attach">1</property>
                     <property name="top_attach">1</property>
-                    <property name="width">1</property>
-                    <property name="height">1</property>
                   </packing>
                 </child>
                 <child>
@@ -254,7 +263,7 @@ PANEL ZLECEŃ SPRZEDAWCY
               </packing>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="ZleceniaLabel22">
+              <object class="GtkLabel" id="ZleceniaLabelPage2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">DOPISZ USŁUGĘ</property>
@@ -265,12 +274,12 @@ PANEL ZLECEŃ SPRZEDAWCY
               </packing>
             </child>
             <child>
-              <object class="GtkBox" id="ZleceniaBoxP3">
+              <object class="GtkBox" id="ZleceniaBoxPage3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="homogeneous">True</property>
                 <child>
-                  <object class="GtkLabel" id="ZleceniaLabelP31">
+                  <object class="GtkLabel" id="ZleceniaLabel31a">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">ID ZLECENIA</property>
@@ -282,7 +291,7 @@ PANEL ZLECEŃ SPRZEDAWCY
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkComboBoxText" id="ZleceniaComboboxtextP31">
+                  <object class="GtkComboBoxText" id="ZleceniaComboboxtext31b">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="active">0</property>
@@ -294,12 +303,12 @@ PANEL ZLECEŃ SPRZEDAWCY
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkButton" id="ZleceniaButtonP31">
+                  <object class="GtkButton" id="ZleceniaButton31c">
                     <property name="label" translatable="yes">SZUKAJ!</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="ZleceniaButtonP31_clicked_cb" swapped="no"/>
+                    <signal name="clicked" handler="ZleceniaButton31c_clicked_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -313,7 +322,7 @@ PANEL ZLECEŃ SPRZEDAWCY
               </packing>
             </child>
             <child type="tab">
-              <object class="GtkLabel" id="ZleceniaLabel3">
+              <object class="GtkLabel" id="ZleceniaLabelPage3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">WYSZUKAJ ZLECENIE</property>
